--- a/frontend/css/dashboard/components/mentor-cards.css
+++ b/frontend/css/dashboard/components/mentor-cards.css
@@ -315,6 +315,7 @@
     color: #fff;
     font-weight: 500;
   }
+  .web-color { background-color: rgba(255, 247, 255, 0.873); color: black; }
   
   /* Events */
   .calendar-events {
