Done Clean JavaScript

--- a/frontend/css/dashboard.css
+++ b/frontend/css/dashboard.css
@@ -10,3 +10,4 @@
 @import './dashboard/components/profile.css';
 @import './dashboard/components/mentor.css';
 @import './dashboard/responsive.css';
+@import './dashboard/components/mentee.css';
